fixed a simple issue where the text-align won't take affect because of the sections, changed them to divs

--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -12,6 +12,7 @@ section {
     max-height: 300px;
     border-radius: 48px;
     padding-bottom: 12px;
+    background: transparent;
 }
 
 .name {
